syntax = "proto3";

package com.battre.stubs.opssvc;

option java_package = "com.battre.stubs.services";
option java_multiple_files = true;

service OpsSvc {
  rpc processIntakeBatteryOrder(processIntakeBatteryOrderRequest) returns (processIntakeBatteryOrderResponse);
}

message processIntakeBatteryOrderRequest {
  repeated BatteryTypeTierCount batteries = 1;
}

message processIntakeBatteryOrderResponse {
  bool success = 1;
}

message BatteryTypeTierCount {
  int32 batteryType = 1;
  int32 batteryTier = 2;
  int32 batteryCount = 3;
}