syntax = "proto3";

package com.battre.stubs.specsvc;

option java_package = "com.battre.stubs.services";
option java_multiple_files = true;

service SpecSvc {
  rpc getRandomBatteryTypes(GetRandomBatteryTypesRequest) returns (GetRandomBatteryTypesResponse);
  rpc getBatteryTerminalLayouts(GetBatteryTerminalLayoutsRequest) returns (GetBatteryTerminalLayoutsResponse);
  rpc getAllBatterySpecs(GetAllBatterySpecsRequest) returns (GetAllBatterySpecsResponse);
  rpc getBatteryTiers(GetBatteryTiersRequest) returns (GetBatteryTiersResponse);
}

message GetRandomBatteryTypesRequest {
  int32 numBatteryTypes = 1;
}

message BatteryTypeTierPair {
  int32 batteryTypeId = 1;
  int32 batteryTierId = 2;
}

message GetRandomBatteryTypesResponse {
  repeated BatteryTypeTierPair batteries = 1;
}

message GetBatteryTerminalLayoutsRequest {
  repeated int32 batteryTypeIds = 1;
}

message BatteryTypeTerminalPair {
  int32 batteryTypeId = 1;
  int32 batteryTerminalLayoutId = 2;
}

message GetBatteryTerminalLayoutsResponse {
  repeated BatteryTypeTerminalPair batteries = 1;
}

message GetBatteryTiersRequest {
}

message GetBatteryTiersResponse {
  repeated BatteryTier batteryTierList = 1;
}

message BatteryTier {
  int32 batteryTierId = 1;
  string batteryTierLabel = 2;
}

message GetAllBatterySpecsRequest {
}

message GetAllBatterySpecsResponse {
  repeated BatterySpecs batterySpecsList = 1;
}

message BatterySpecs {
  int32 batteryTypeId = 1;
  string mfc = 2;
  int32 terminalLayoutId = 3;
  int32 tierId = 4;
  string composition = 5;
  string safetyInfo = 6;
  double minVoltage = 7;
  double maxVoltage = 8;
  double minCurrent = 9;
  double maxCurrent = 10;
}