syntax = "proto3";

package com.battre.stubs.storagesvc;

option java_package = "com.battre.stubs.services";
option java_multiple_files = true;

service StorageSvc {
  rpc tryStoreBatteries(StoreBatteryRequest) returns (StoreBatteryResponse);
  rpc removeStorageBattery(RemoveStorageBatteryRequest) returns (RemoveStorageBatteryResponse);
  rpc getStorageStats(GetStorageStatsRequest) returns (GetStorageStatsResponse);
}

message BatteryStorageInfo {
  int32 batteryId = 1;
  int32 batteryTier = 2;
}

message StoreBatteryRequest {
  int32 orderId = 1;
  repeated BatteryStorageInfo batteries = 2;
}

message StoreBatteryResponse {
    bool success = 1;
}

message RemoveStorageBatteryRequest {
  int32 batteryId = 1;
}

message RemoveStorageBatteryResponse {
  bool success = 1;
}

message GetStorageStatsRequest {
}

message GetStorageStatsResponse {
  repeated TierStats tierStatsList = 1;
}

message TierStats {
  int32 batteryTierId = 1;
  int32 availStorage = 2;
  int32 capacity = 3;
}