syntax = "proto3";

package com.battre.stubs.triagesvc;

option java_package = "com.battre.stubs.services";
option java_multiple_files = true;

service TriageSvc {
    rpc generateIntakeBatteryOrder(GenerateIntakeBatteryOrderRequest) returns (GenerateIntakeBatteryOrderResponse);
}

message GenerateIntakeBatteryOrderRequest {
}

message GenerateIntakeBatteryOrderResponse {
  bool success = 1;
}